Update and rename 2019-03-22北极通讯网络.md to 2019-03-22-北极通讯网络.md

--- a/_posts/2019-03-22-北极通讯网络.md
+++ b/_posts/2019-03-22-北极通讯网络.md
@@ -1,3 +1,22 @@
+---
+layout: article
+title: 分治 | [USACO06JAN]把牛Corral the Cows
+categories: 题目
+tags: 题目
+mode: immersive
+header:   
+theme: dark
+article_header:   
+type: overlay   
+theme: dark   
+background_color: '#203028'   
+background_image:     
+gradient: 'linear-gradient(135deg, rgba(34, 139, 87 , .4), rgba(139, 34, 139, .4))'     
+src: 'https://i.loli.net/2019/03/18/5c8f66802353d.jpg'
+---
+
+<!--more-->
+
 ## Description   
 北极地区共有P座村庄，每座村庄均有自己的坐标。现在决定在村庄之间建立通信网络，其中通讯工具可以是无线电收发机，也可以是卫星设备。你的任务是让任意两座村庄之间都可以直接或间接地通信。   
 卫星设备一共有S台，拥有卫星设备的两座村庄之间无论相距多远都可以直接通信；其他每个村庄都可以配备一台无线收发机，但必须具有相同的参数d。只有欧基里德不是超过d的村庄才能用无线收发机直接通讯。由于d越大的无线电收发机越贵，你需要合理分配这S台卫星设备，才能让其他村庄的无线电收发机的d最小。    
